--- a/README
+++ b/README
@@ -4,5 +4,5 @@
       **кнопка "Купить" залита зелёным цветом
       **рядом с карточкой товара добавлена форма с полями «Имя» и «Email» и кнопкой «Отправить»
       **под карточкой товара добавлен раздел FAQ
-      **под разделом FAQ размещена таблица с заказами, где у каждого статуса сой цвет
+      **под разделом FAQ размещена таблица с заказами, где у каждого статуса свой цвет
       **создано простое веб-приложение, которое на любой GET-запрос будет возвращать страницу из index.html
